--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -159,7 +159,9 @@
         </div>
     </div>
 </div>
-
+<footer style="position: fixed; bottom: 10px; right: 10px; font-size: 0.8rem; color: #888;">
+    Версия системы: <span th:text="${version}">0.0.0</span>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
