feat: Описаны примеры игнорируемых документов

--- a/src/main/resources/templates/projects/form.html
+++ b/src/main/resources/templates/projects/form.html
@@ -92,8 +92,8 @@
                       th:text="${ignorePatternsText}"></textarea>
             <div class="form-text">
                 Каждое выражение укажите в новой строке. Например:<br>
-                <code>.*old.*</code><br>
-                <code>.*/archive/.*</code>
+                <code>.*old.*</code><h> проигнорирует папки и файлы содержащие old в имени</h><br>
+                <code>.*\/Имя проекта\/Покупное\/.*</code><h> проигнорирует папку /Имя проекта/Покупное/</h>
             </div>
         </div>
 
